--- a/evaluate_results_bert_commonsenseqa.ipynb
+++ b/evaluate_results_bert_commonsenseqa.ipynb
@@ -30,27 +30,36 @@
       "metadata": {
         "id": "0P14Xvds6OgZ",
         "colab_type": "code",
-        "outputId": "8d9c025f-e340-4ce1-c2f4-77e222ea0730",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# Code leveraged from https://github.com/huggingface/pytorch-pretrained-BERT/blob/master/examples/run_swag.py"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "buZGfcftsLX-",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
-        }
+          "height": 54
+        },
+        "outputId": "c480f659-b4ff-4993-f667-11dc92280750"
       },
       "cell_type": "code",
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 0,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
