--- a/csqa_test_random_input.ipynb
+++ b/csqa_test_random_input.ipynb
@@ -6,6 +6,7 @@
       "name": "csqa_test_random_input.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -172,11 +173,22 @@
       },
       "cell_type": "code",
       "source": [
+        "''' Set file names here'''\n",
         "config_file = '/content/gdrive/My Drive/Colab Notebooks/bert_config_rand_3.json'\n",
         "model_bin_file = '/content/gdrive/My Drive/Colab Notebooks/pytorch_model_rand_3.bin'"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "Y9U6zxNE8cxa",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# Load model and supporting methods/classes"
+      ]
     },
     {
       "metadata": {
@@ -428,7 +440,7 @@
         "    predictions.extend(outputs)\n",
         "\n",
         "answer_choices = [answer_choice_0, answer_choice_1, answer_choice_2]\n",
-        "print('\\nAnswer is Choice ' + str(predictions[0]) + ': '+ answer_choices[predictions[0]])"
+        "print('Answer is Choice ' + str(predictions[0]) + ': '+ answer_choices[predictions[0]])"
       ],
       "execution_count": 8,
       "outputs": [
