--- a/csqa_test_random_input.ipynb
+++ b/csqa_test_random_input.ipynb
@@ -27,6 +27,30 @@
     },
     {
       "metadata": {
+        "id": "a6EDCRYYC0Xu",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## Instructions\n",
+        "\n",
+        "Upload bert_config.json & pytorch_model.bin files from the 'models' folder into your Google Drive. Once you've mounted your drive (in the 3rd cell of this notebook), set the file path of these 2 files in cell 4. This takes care of the model loading portion.  \n",
+        "\n",
+        "To test random input, fill out the Question/Answer form by inputting a common sense question with 3 answer options. Run the remaining cells of the notebook to get your answer prediction by this model. \n",
+        "\n",
+        "####Example of Common Sense Questions:  \n",
+        "1. Why do people read gossip magazines? **A) entertained** B) get information C) improve know how  \n",
+        "\n",
+        "2. When a person admits his mistakes, what are they doing? **A) act responsibly** B) learn to swim C) feel relieved  \n",
+        "\n",
+        "3. Where can books be read? A) shelf **B) table** C) backpack  \n",
+        "\n",
+        "** examples from https://www.tau-nlp.org/commonsenseqa\n",
+        "\n"
+      ]
+    },
+    {
+      "metadata": {
         "id": "Kro-HAGTXWIr",
         "colab_type": "text"
       },
@@ -174,8 +198,8 @@
       "cell_type": "code",
       "source": [
         "''' Set file names here'''\n",
-        "config_file = '/content/gdrive/My Drive/Colab Notebooks/bert_config_rand_3.json'\n",
-        "model_bin_file = '/content/gdrive/My Drive/Colab Notebooks/pytorch_model_rand_3.bin'"
+        "config_file = '/content/gdrive/My Drive/Colab Notebooks/bert_config.json'\n",
+        "model_bin_file = '/content/gdrive/My Drive/Colab Notebooks/pytorch_model.bin'"
       ],
       "execution_count": 0,
       "outputs": []
