--- a/evaluate_results_bert_csqa.ipynb
+++ b/evaluate_results_bert_csqa.ipynb
@@ -6,8 +6,7 @@
       "name": "evaluate_results_bert_csqa.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -17,16 +16,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/bhagyasharma/nlp_commonsenseqa/blob/master/evaluate_results_bert_csqa.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "metadata": {
         "colab_type": "code",
@@ -140,6 +129,7 @@
       "source": [
         "# train model\n",
         "# this part can be skipped if you already have your model\n",
+        "# NOTE: ensure training script & data files have been uploaded to your google drive\n",
         "!python gdrive/My\\ Drive/Colab\\ Notebooks/train_csqa.py   --bert_model bert-base-uncased  --do_lower_case   --data_dir gdrive/My\\ Drive/Colab\\ Notebooks/qtoken_3_data   --num_choices 3 --train_batch_size 16   --learning_rate 2e-5   --num_train_epochs 1.0   --max_seq_length 128   --output_dir /tmp/csqa_output/   --gradient_accumulation_steps 4"
       ],
       "execution_count": 0,
@@ -2624,7 +2614,7 @@
       },
       "cell_type": "code",
       "source": [
-        "len(predictions) #verify this is same as number of examples"
+        "len(predictions) #verify this is same as number of examples shown in previous step output"
       ],
       "execution_count": 0,
       "outputs": [
