add github link

--- a/evaluate_results_bert_csqa.ipynb
+++ b/evaluate_results_bert_csqa.ipynb
@@ -13,7 +13,8 @@
     "# Code leveraged from https://github.com/huggingface/pytorch-pretrained-BERT/blob/master/examples/run_swag.py\n",
     "# This notebook is to run model on val.csv & test.csv files, \n",
     "# prediction results saved as 'predictions.csv' & 'questions.jsonl' at end\n",
-    "# to test unseen input, use csqa_test_random_input.ipynb"
+    "# to test unseen input, use csqa_test_random_input.ipynb\n",
+    "# For more information, see https://github.com/bhagyasharma/nlp_commonsenseqa"
    ]
   },
   {
