add a few more comments

--- a/csqa_test_random_input.ipynb
+++ b/csqa_test_random_input.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "## Instructions\n",
     "\n",
-    "Upload bert_config.json & pytorch_model.bin files from the 'models' folder into your Google Drive. Once you've mounted your drive (in the 3rd cell of this notebook), set the file path of these 2 files in cell 4. This takes care of the model loading portion.  \n",
+    "Upload bert_config.json & pytorch_model.bin files from the 'test_model' folder into your Google Drive. Once you've mounted your drive (in the 3rd cell of this notebook), set the file path of these 2 files in cell 4. This takes care of the model loading portion.  \n",
     "\n",
     "To test random input, fill out the Question/Answer form by inputting a common sense question with 3 answer options. Run the remaining cells of the notebook to get your answer prediction by this model. \n",
     "\n",
@@ -211,6 +211,7 @@
    "outputs": [],
    "source": [
     "# Load a trained model and config that you have fine-tuned\n",
+    "# for this example we are specifically testing with rand_3 model\n",
     "config = BertConfig(config_file)\n",
     "model = BertForMultipleChoice(config, num_choices=3)\n",
     "model.load_state_dict(torch.load(model_bin_file, map_location=torch.device('cpu')))\n",
@@ -369,7 +370,7 @@
     "id": "8WEi_XnXXm2Y"
    },
    "source": [
-    "#Add test input"
+    "# Add test input"
    ]
   },
   {
