add comment for json to csv

--- a/csqa_json_to_csv.ipynb
+++ b/csqa_json_to_csv.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## This file converts all jsonl files to csv and coverts answerKey label to number equivalent for BERT model"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 117,
    "metadata": {},
    "outputs": [],
